# xml_extractor

./: .gitignore  README.md  main.py  pyproject.toml
json_config/: config.json  ipa240229_config.json  sample_book_config.json
tests/: conftest.py  test_extract_data.py  test_get_config.py  test_get_data.py  test_get_xml_contents.py  test_is_xml_content.py  test_output.py  test_xml_extractor.py
tests/test_data/: test_data.xml  test_data_multiple.xml
tests/test_json_config/: test_config.json
xml_extractor/: config.json  config.py  const.py  xml_extractor.py
